--- a/views/list.ejs
+++ b/views/list.ejs
@@ -44,21 +44,43 @@
             </ul>
         </div>
     </nav>
-    <% for(let i=0; i<posts.length; i++){ %>
-    <h4> 할 일 : <%= posts[i].제목 %></h4>
-    <p> 날짜 : <%=posts[i].날짜 %></p>
-    <% } %>
+
+
+<h4 class="ml-2 my-3">언제 하지?</h4>
+<ul class="list-group">
+    <% for (var i=0; i < posts.length; i++){ %>
+        <li class="list-group-item">
+            <h4> 할일 제목 : <%= posts[i].제목 %></h4>
+            <p> 할일 마감날짜 : <%= posts[i].날짜 %></p>
+            <button class="delete" data-id="<%=posts[i]._id%>">삭제</button>
+        </li>
+        <% } %>
+</ul>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.js"></script>
+<script>
+
+        $('.delete').click(function (e) {
+            const postIdx = e.target.dataset.id;
+            $.ajax({
+                method: 'DELETE',
+                url: '/delete',
+                data: { _id : postIdx }
+            }).done(function (result) {
+
+            });
+        });
+
+
+
+</script>
 
 
 
 
 
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
