--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -45,46 +45,16 @@
         </div>
     </nav>
 
-
-<h4 class="ml-2 my-3">오늘 뭐하지?</h4>
-<ul class="list-group">
-    <% for (var i=0; i < posts.length; i++){ %>
-        <li class="list-group-item">
-            <h4> 할일 제목 : <%= posts[i].제목 %></h4>
-            <p> 할일 마감날짜 : <%= posts[i].날짜 %></p>
-            <button class="delete" data-id="<%=posts[i]._id%>">삭제</button>
-        </li>
-        <% } %>
-</ul>
-
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.js"></script>
-<script>
-
-        $('.delete').click(function (e) {
-            const postIdx = e.target.dataset.id;
-            const clickedBtn = $(this);
-            $.ajax({
-                method: 'DELETE',
-                url: '/delete',
-                data: { _id : postIdx }
-            }).done(function (result) {
-                alert('삭제 완료되었습니다.');
-                clickedBtn.parent('li').fadeOut();
-            }).fail(function(){
-                alert('삭제 처리 중 문제가 발생했습니다.');
-            });
-        });
-
-
-
-</script>
+    <h4>상세 페이지</h4>
+    <h4>제목 : <%= data.제목 %></h4>
+    <h4>날짜 : <%= data.날짜 %> </h4>
 
 
 
 
 
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
