--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,47 +10,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
+    <link href="/public/main.css" rel="stylesheet">
+
+
+
     <title>Hello, world!</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #469fffe6; color:white;">
-        <a class="navbar-brand" href="#">오늘뭐하지?</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">기록하기</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">임시</a>
-                </li>
-                <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+<%- include('nav.html') %>
+
+
+
+<div class="container mt-4">
+    <h4 class="text-center">상세 페이지</h4>
+    <div class="container mt-3">
+        <div class="card" style="width: 100%">
+            <div class="card-body">
+                <h5 class="card-title">
+                    <%= data.제목 %>
+                </h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <%= data.날짜 %>
+                </h6>
+                <p class="card-text">임시내용입니다.</p>
+                <a href="#" class="card-link">수정하기</a>
+            </div>
         </div>
-      </li> -->
-            </ul>
-        </div>
-    </nav>
-
-    <h4>상세 페이지</h4>
-    <h4>제목 : <%= data.제목 %></h4>
-    <h4>날짜 : <%= data.날짜 %> </h4>
-
-
-
+    </div>
+</div>
 
 
 
