--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,54 +9,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-
+    <link href="/public/main.css" rel="stylesheet">
     <title>Hello, world!</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #469fffe6; color:white;">
-        <a class="navbar-brand" href="#">오늘뭐하지?</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">기록하기</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">임시</a>
-                </li>
-                <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
-            </ul>
-        </div>
-    </nav>
+
+<%- include('nav.html') %>
 
 
-<h4 class="ml-2 my-3">오늘 뭐하지?</h4>
+<h4 class="ml-2 my-3 text-center">오늘 뭐하지?</h4>
+<div class="container">
 <ul class="list-group">
     <% for (var i=0; i < posts.length; i++){ %>
         <li class="list-group-item">
+            <p>글번호 : <%= posts[i]._id %></p>
             <h4> 할일 제목 : <%= posts[i].제목 %></h4>
             <p> 할일 마감날짜 : <%= posts[i].날짜 %></p>
-            <button class="delete" data-id="<%=posts[i]._id%>">삭제</button>
+            <button class="delete btn btn-danger" data-id="<%=posts[i]._id%>">삭제</button>
         </li>
         <% } %>
 </ul>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.js"></script>
 <script>
 
