--- a/views/write.ejs
+++ b/views/write.ejs
@@ -11,36 +11,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #469fffe6; color:white;">
-  <a class="navbar-brand" href="#">오늘뭐하지?</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">기록하기</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">임시</a>
-      </li>
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
-    </ul>
-  </div>
-</nav>
+<%- include('nav.html') %>
   <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
   <div class="container mt-3">
