글 삭제 기능 완성(본인 작성글만)

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -58,7 +58,7 @@
                 data: { _id : postIdx }
             }).done(function (result) {
                 alert('삭제 완료되었습니다.');
-            //    clickedBtn.parent('li').fadeOut();
+                clickedBtn.parent('li').fadeOut();
             }).fail(function(){
                 alert('삭제 처리 중 문제가 발생했습니다.');
             });
